[gd_scene load_steps=33 format=3 uid="uid://chm7lx5gmkoj8"]

[ext_resource type="Script" uid="uid://b134pio0l56lh" path="res://Assets/Scripts/flying_eye.gd" id="1_2kotr"]
[ext_resource type="Texture2D" uid="uid://cw1vku1xwcxba" path="res://Assets/Sprites/FlyingEye/Attack.png" id="1_t4ddr"]
[ext_resource type="Texture2D" uid="uid://cgnefdokkldqj" path="res://Assets/Sprites/FlyingEye/Death.png" id="2_2kotr"]
[ext_resource type="PackedScene" uid="uid://ce2yp2wx5gcpt" path="res://Assets/Scenes/healthbar_enemy.tscn" id="2_3uwbq"]
[ext_resource type="Texture2D" uid="uid://e4yjp7g0jkx" path="res://Assets/Sprites/FlyingEye/Flight.png" id="3_3uwbq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ruhqj"]
atlas = ExtResource("1_t4ddr")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmpt4"]
atlas = ExtResource("1_t4ddr")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl5hj"]
atlas = ExtResource("1_t4ddr")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_niams"]
atlas = ExtResource("1_t4ddr")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6auw1"]
atlas = ExtResource("1_t4ddr")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c6bq"]
atlas = ExtResource("1_t4ddr")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7u3d"]
atlas = ExtResource("1_t4ddr")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_32sc6"]
atlas = ExtResource("1_t4ddr")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y7rv"]
atlas = ExtResource("2_2kotr")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8rgj"]
atlas = ExtResource("2_2kotr")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m40o"]
atlas = ExtResource("2_2kotr")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_igmtt"]
atlas = ExtResource("2_2kotr")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7061o"]
atlas = ExtResource("2_2kotr")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwyh8"]
atlas = ExtResource("2_2kotr")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf6is"]
atlas = ExtResource("2_2kotr")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uewok"]
atlas = ExtResource("2_2kotr")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh38y"]
atlas = ExtResource("3_3uwbq")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_f72ka"]
atlas = ExtResource("3_3uwbq")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwlj8"]
atlas = ExtResource("3_3uwbq")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_funnn"]
atlas = ExtResource("3_3uwbq")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8w7f"]
atlas = ExtResource("3_3uwbq")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_j566r"]
atlas = ExtResource("3_3uwbq")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i0x7"]
atlas = ExtResource("3_3uwbq")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2y2x"]
atlas = ExtResource("3_3uwbq")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_sbl71"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruhqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmpt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl5hj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niams")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6auw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c6bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7u3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32sc6")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y7rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8rgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m40o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igmtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7061o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwyh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf6is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uewok")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh38y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f72ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwlj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_funnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8w7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j566r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i0x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2y2x")
}],
"loop": true,
"name": &"flight",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3uwbq"]
radius = 15.0
height = 36.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ruhqj"]
size = Vector2(55, 87)

[node name="FlyingEye" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 1792
collision_mask = 255
script = ExtResource("1_2kotr")

[node name="HealthBarEnemy" parent="." instance=ExtResource("2_3uwbq")]
offset_left = -32.0
offset_top = -30.0
offset_right = 32.0
offset_bottom = -22.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-5, -2)
sprite_frames = SubResource("SpriteFrames_sbl71")
animation = &"flight"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_3uwbq")

[node name="LeftPoint" type="Marker2D" parent="."]
position = Vector2(0, -1)

[node name="RightPoint" type="Marker2D" parent="."]
position = Vector2(124, 0)

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(29, 12)
collision_layer = 3840
collision_mask = 65287

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(16.5, -8.5)
shape = SubResource("RectangleShape2D_ruhqj")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
